--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h1>{{ title }} !</h1>
-<app-post-add></app-post-add>
-
+<app-head></app-head>
+<main>
+  <app-post-add></app-post-add>
+  <app-post-currPosts></app-post-currPosts>
+</main>
 
 
 
