--- a/src/app/posts/post-createBlog/post-add.component.html
+++ b/src/app/posts/post-createBlog/post-add.component.html
@@ -5,7 +5,7 @@
     <textarea matInput rows="6" [(ngModel)]="textEntered"></textarea>
   </mat-form-field>
 
-  <button mat-raised-button color="primary" (click)="onAddPost()">Add Post</button>
+  <button mat-raised-button color="accent" (click)="onAddPost()">Add Post</button>
 </mat-card>
 
 
