--- a/src/app/posts/post-createBlog/post-add.component.html
+++ b/src/app/posts/post-createBlog/post-add.component.html
@@ -1,11 +1,16 @@
-
+<!--Template driven forms below-->
 <mat-card>
-  <mat-form-field>
-    <!--<textarea rows="6" [value]="newPost" #addInput></textarea> &lt;!&ndash;adjust text area here&ndash;&gt;-->
-    <textarea matInput rows="6" [(ngModel)]="textEntered"></textarea>
-  </mat-form-field>
-
-  <button mat-raised-button color="accent" (click)="onAddPost()">Add Post</button>
+  <form (submit)="onAddPost(blogForm)" #blogForm="ngForm"> <!--Listening for submit button-->
+    <mat-form-field>
+      <input matInput type="text" name="title" ngModel required minlength="3" #title="ngModel">
+      <mat-error *ngIf="title.invalid">Enter a title, Please.</mat-error>
+    </mat-form-field>
+    <mat-form-field>
+      <textarea matInput rows="5" name="content" ngModel required #content="ngModel"></textarea>
+      <mat-error *ngIf="content.invalid">All title & No post?</mat-error>
+    </mat-form-field>
+    <button mat-raised-button color="accent" type="submit">Add Post</button>
+  </form>
 </mat-card>
 
 
