--- a/src/app/posts/post-currPosts/post-currPosts.component.html
+++ b/src/app/posts/post-currPosts/post-currPosts.component.html
@@ -1,10 +1,11 @@
 
-<mat-accordion>
-  <mat-expansion-panel>
+<mat-accordion multi="true" *ngIf="posts.length > 0">
+  <mat-expansion-panel *ngFor="let post of posts">
     <mat-expansion-panel-header>
-      <p>{{title}}</p>
+      <p>{{post.title}}</p>
     </mat-expansion-panel-header>
-    <p>{{content}}</p>
+    <p>{{post.content}}</p>
   </mat-expansion-panel>
 </mat-accordion>
+<p class="blog-text mat-body-1" *ngIf="posts.length <= 0">I feel lonely, No one has posted yet.</p>
 
