--- a/src/app/posts/post-currPosts/post-currPosts.component.html
+++ b/src/app/posts/post-currPosts/post-currPosts.component.html
@@ -1,10 +1,14 @@
 
-<mat-accordion multi="true" *ngIf="posts.length > 0">
+<mat-accordion multi="true" *ngIf="posts.length > 0"> <!--Multi="true" allows multiple posts to be open-->
   <mat-expansion-panel *ngFor="let post of posts">
     <mat-expansion-panel-header>
       <p>{{post.title}}</p>
     </mat-expansion-panel-header>
     <p>{{post.content}}</p>
+    <mat-action-row>
+      <button mat-button color="primary">EDIT</button>
+      <button mat-button color="warn">DELETE</button>
+    </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
 <p class="blog-text mat-body-1" *ngIf="posts.length <= 0">I feel lonely, No one has posted yet.</p>
