Added angular Routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <!--Note: Property and Event binding on line's 4 & 5-->
-<app-head></app-head>
+<app-head></app-head> <!--Tool Bar-->
 <main>
   <!--<app-post-add (postAdded)="onPostCreated($event)"></app-post-add> &lt;!&ndash;Listening to post created event, 'post-add.component.ts'. Then adding the post to 'app.component' createdPosts&ndash;&gt;-->
-  <app-post-add></app-post-add>
-  <app-post-currPosts></app-post-currPosts> <!--'app.component' passed the created posts to 'post-currPosts'-->
+  <!--<app-post-add></app-post-add>-->
+  <!--<app-post-currPosts></app-post-currPosts> &lt;!&ndash;'app.component' passed the created posts to 'post-currPosts'&ndash;&gt;-->
+  <router-outlet></router-outlet>
 </main>
 
 
