--- a/src/app/head/head.component.html
+++ b/src/app/head/head.component.html
@@ -1,2 +1,12 @@
 
-<mat-toolbar color="primary">Post Up!</mat-toolbar>
+<mat-toolbar color="primary">
+  <span>
+    <a routerLink="/">Post Up!</a>
+  </span>
+  <span class="tBar"></span>
+    <ul>
+      <li>
+        <a mat-button routerLink="/create" routerLinkActive="mat-accent">New Post</a>
+      </li>
+    </ul>
+</mat-toolbar>
