--- a/src/app/head/head.component.html
+++ b/src/app/head/head.component.html
@@ -6,7 +6,7 @@
   <span class="tBar"></span>
     <ul>
       <li>
-        <a mat-button routerLink="/create" routerLinkActive="mat-accent">New Post</a>
+        <a mat-button routerLink="/newPost" routerLinkActive="mat-accent">New Post</a>
       </li>
     </ul>
 </mat-toolbar>
