--- a/src/app/posts/post-createBlog/post-add.component.html
+++ b/src/app/posts/post-createBlog/post-add.component.html
@@ -14,7 +14,10 @@
     </mat-form-field>
     <div>
       <button mat-stroked-button type="button" (click)="selectFile.click()">Upload Image</button>
-      <input type="file" #selectFile>
+      <input type="file" #selectFile (change)="onImageSelected($event)">
+    </div>
+    <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid">
+      <img [src]="imagePreview" [alt]="form.value.title">
     </div>
     <mat-form-field>
       <textarea
