Adding Login Component

--- a/src/app/posts/post-createBlog/post-add.component.html
+++ b/src/app/posts/post-createBlog/post-add.component.html
@@ -27,7 +27,7 @@
         placeholder="Content Here..."></textarea>
       <mat-error *ngIf="form.get('content').invalid">All title & No post?</mat-error>
     </mat-form-field>
-    <button mat-raised-button color="accent" type="submit">Add Post</button>
+    <button mat-raised-button color="accent" type="submit">Save Post</button>
   </form>
 </mat-card>
 
