--- a/src/app/head/head.component.html
+++ b/src/app/head/head.component.html
@@ -8,5 +8,8 @@
       <li>
         <a mat-button routerLink="/newPost" routerLinkActive="mat-accent">New Post</a>
       </li>
+      <li>
+        <a mat-button routerLink="/login" routerLinkActive="mat-accent">Login</a>
+      </li>
     </ul>
 </mat-toolbar>
