--- a/src/app/head/head.component.html
+++ b/src/app/head/head.component.html
@@ -11,5 +11,8 @@
       <li>
         <a mat-button routerLink="/login" routerLinkActive="mat-accent">Login</a>
       </li>
+      <li>
+        <a mat-button routerLink="/signUp" routerLinkActive="mat-accent">Sign Up</a>
+      </li>
     </ul>
 </mat-toolbar>
