--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -25,6 +25,6 @@
         required password>
       <mat-error *ngIf="passwordInput.invalid">Enter a valid Password</mat-error>
     </mat-form-field>
-    <button mat-raised-button color="accent" type="submit">Login</button>
+    <button mat-raised-button color="accent" type="submit" *ngIf="!loadingSpinner">Login</button>
   </form>
 </mat-card>
