--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -25,6 +25,7 @@
         required password>
       <mat-error *ngIf="passwordInput.invalid">Enter a valid Password</mat-error>
     </mat-form-field>
-    <button mat-raised-button color="accent" type="submit">Sign Up</button>
+    <button mat-raised-button color="accent" type="submit" *ngIf="!loadingSpinner">Sign Up</button>
+    <mat-spinner *ngIf="loadingSpinner"></mat-spinner>
   </form>
 </mat-card>
