--- a/src/app/posts/post-currPosts/post-currPosts.component.html
+++ b/src/app/posts/post-currPosts/post-currPosts.component.html
@@ -8,7 +8,7 @@
       <img [src]="post.imagePath" [alt]="post.title">
     </div>
     <p>{{post.content}}</p>
-    <mat-action-row *ngIf="userIsAuthenticated">
+    <mat-action-row *ngIf="userIsAuthenticated && userId === post.creator ">
       <a mat-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a> <!--Router link accesses the post in posts-->
       <button mat-button color="accent" (click)="postDelete(post.id)">DELETE</button>
     </mat-action-row>
